--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.cplop.app</groupId>
+
+  <groupId>org.cplop.app</groupId>
   <artifactId>kNearestClusters</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
+
   <name>kNearestClusters</name>
-  <url>http://maven.apache.org</url>
+  <url>http://cplop.cosam.calpoly.edu/</url>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
