--- a/pom.xml
+++ b/pom.xml
@@ -3,20 +3,33 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.cplop.app</groupId>
+  <groupId>org.cplop</groupId>
   <artifactId>kNearestClusters</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-
   <name>kNearestClusters</name>
   <url>http://cplop.cosam.calpoly.edu/</url>
 
   <dependencies>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.6</version>
+    </dependency>
+
   </dependencies>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
 </project>
