--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,23 @@ hs_err_pid*
 # VIM
 *~
 .*.swp
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
+
+# Log4J
+*.log*
