--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -12,7 +12,7 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>knearest</artifactId>
+  <artifactId>implementation</artifactId>
   <packaging>jar</packaging>
   <name>CPLOP Library Data Structures</name>
   <url>http://cplop.cosam.calpoly.edu/</url>
@@ -21,7 +21,12 @@
     <!-- Clustering -->
     <dependency>
       <groupId>org.calpoly.cplop</groupId>
-      <artifactId>clustering</artifactId>
+      <artifactId>library</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.calpoly.cplop</groupId>
+      <artifactId>knearest</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
