--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   <modules>
     <module>library</module>
     <module>knearest</module>
+    <module>implementation</module>
   </modules>
 
   <dependencies>
